--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,7 +10,7 @@
         </div>
 
         <div class="form-group">
-            <label for="username-input-login"class="form-label">Password:</label>
+            <label for="inputPassword" class="form-label">Password:</label>
             <input class="form-input" type="password" id="password-input-signup" placeholder="Password" />
         </div>
 
